Reworked the generator for Webpack2 and introducted a build script for managing NPM and Composer deps.
add shrinkwrap code

restructure the build script

chmod build

remove spaces

more

fix theme thing

more updates

more

updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-**/**.swp
-**/**.swo
+*.sw*
 .DS_Store
 .env
 vendor/*
@@ -7,4 +6,4 @@ wp-vendor/*
 public/wp-content/*
 public/wordpress/*
 node_modules
-/themes/_skylineblog/bundle
+/themes/**/bundle
