--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
         {
             "name": "Marc Tanis",
             "email": "marc@blendimc.com"
+        },
+        {
+            "name": "James Rotering",
+            "email": "james@blendimc.com"
+        },
+        {
+            "name": "Jared Meyering",
+            "email": "jared@blendimc.com"
         }
     ],
-    "require": {
-        "johnpbloch/wordpress": "^4.7",
-        "vlucas/phpdotenv": "^2.4",
-        "wpackagist-plugin/advanced-custom-fields": "^4.4",
-        "wpackagist-theme/twentyseventeen": "^1.1"
-    },
     "extra": {
         "wordpress-install-dir":"public/wordpress/",
         "installer-paths": {
